; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/msm/extr_mdp_ppp.c_get_chroma_addr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/msm/extr_mdp_ppp.c_get_chroma_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mdp_img = type { i32, i32, i32 }
%struct.mdp_rect = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mdp_img*, %struct.mdp_rect*, i32, i32, i32, i32*, i32*)* @get_chroma_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_chroma_addr(%struct.mdp_img* %0, %struct.mdp_rect* %1, i32 %2, i32 %3, i32 %4, i32* %5, i32* %6) #0 {
  %8 = alloca %struct.mdp_img*, align 8
  %9 = alloca %struct.mdp_rect*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store %struct.mdp_img* %0, %struct.mdp_img** %8, align 8
  store %struct.mdp_rect* %1, %struct.mdp_rect** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32* %5, i32** %13, align 8
  store i32* %6, i32** %14, align 8
  %18 = load %struct.mdp_img*, %struct.mdp_img** %8, align 8
  %19 = getelementptr inbounds %struct.mdp_img, %struct.mdp_img* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @Y_TO_CRCB_RATIO(i32 %20)
  store i32 %21, i32* %15, align 4
  store i32 2, i32* %16, align 4
  %22 = load %struct.mdp_img*, %struct.mdp_img** %8, align 8
  %23 = getelementptr inbounds %struct.mdp_img, %struct.mdp_img* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  %25 = call i64 @IS_PSEUDOPLNR(i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %79

27:                                               ; preds = %7
  %28 = load %struct.mdp_rect*, %struct.mdp_rect** %9, align 8
  %29 = getelementptr inbounds %struct.mdp_rect, %struct.mdp_rect* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* %16, align 4
  %32 = sdiv i32 %30, %31
  %33 = load i32, i32* %16, align 4
  %34 = mul nsw i32 %32, %33
  store i32 %34, i32* %17, align 4
  %35 = load %struct.mdp_rect*, %struct.mdp_rect** %9, align 8
  %36 = getelementptr inbounds %struct.mdp_rect, %struct.mdp_rect* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = icmp eq i32 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %27
  br label %51

40:                                               ; preds = %27
  %41 = load %struct.mdp_rect*, %struct.mdp_rect** %9, align 8
  %42 = getelementptr inbounds %struct.mdp_rect, %struct.mdp_rect* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = add nsw i32 %43, 1
  %45 = load i32, i32* %15, align 4
  %46 = sdiv i32 %44, %45
  %47 = load %struct.mdp_img*, %struct.mdp_img** %8, align 8
  %48 = getelementptr inbounds %struct.mdp_img, %struct.mdp_img* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = mul nsw i32 %46, %49
  br label %51

51:                                               ; preds = %40, %39
  %52 = phi i32 [ 0, %39 ], [ %50, %40 ]
  %53 = load i32, i32* %17, align 4
  %54 = add nsw i32 %53, %52
  store i32 %54, i32* %17, align 4
  %55 = load i32, i32* %10, align 4
  %56 = load %struct.mdp_img*, %struct.mdp_img** %8, align 8
  %57 = getelementptr inbounds %struct.mdp_img, %struct.mdp_img* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = load %struct.mdp_img*, %struct.mdp_img** %8, align 8
  %60 = getelementptr inbounds %struct.mdp_img, %struct.mdp_img* %59, i32 0, i32 1
  %61 = load i32, i32* %60, align 4
  %62 = mul nsw i32 %58, %61
  %63 = load i32, i32* %11, align 4
  %64 = mul nsw i32 %62, %63
  %65 = add nsw i32 %55, %64
  %66 = load i32*, i32** %13, align 8
  store i32 %65, i32* %66, align 4
  %67 = load i32, i32* %17, align 4
  %68 = load i32, i32* %11, align 4
  %69 = mul nsw i32 %67, %68
  %70 = load i32*, i32** %13, align 8
  %71 = load i32, i32* %70, align 4
  %72 = add nsw i32 %71, %69
  store i32 %72, i32* %70, align 4
  %73 = load i32*, i32** %14, align 8
  %74 = load i32, i32* %73, align 4
  %75 = shl i32 %74, 16
  %76 = load i32*, i32** %14, align 8
  %77 = load i32, i32* %76, align 4
  %78 = or i32 %77, %75
  store i32 %78, i32* %76, align 4
  br label %81

79:                                               ; preds = %7
  %80 = load i32*, i32** %13, align 8
  store i32 0, i32* %80, align 4
  br label %81

81:                                               ; preds = %79, %51
  ret void
}

declare dso_local i32 @Y_TO_CRCB_RATIO(i32) #1

declare dso_local i64 @IS_PSEUDOPLNR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
